# schakel-gemma

./: .gitignore  README.md  build_intent_dataset.py  main.py  pyproject.toml  test_router.py  train_router.py
data/: train.jsonl  valid.jsonl
